add docs and fix transaction pagination and filters
